Update required envs

--- a/drone-server/secrets.env.sample
+++ b/drone-server/secrets.env.sample
@@ -4,11 +4,14 @@ DRONE_BITBUCKET_SERVER=
 DRONE_BITBUCKET_CLIENT_ID=
 DRONE_BITBUCKET_CLIENT_SECRET=
 
+DRONE_SERVER_HOST=
+DRONE_SERVER_PROTO=http
+
 DRONE_RPC_SECRET=
 DRONE_AGENTS_ENABLED=true
-DRONE_RPC_DEBUG=true
+# DRONE_RPC_DEBUG=true
 
-# DRONE_TLS_AUTOCERT=true
+DRONE_TLS_AUTOCERT=true
 
-# DRONE_USER_CREATE=username:__USER__,admin:true
+# DRONE_USER_CREATE=username:User,admin:true
 
