Expose ports 80 and 443 and /data for acme compatibility

--- a/drone-server/docker-compose.yml
+++ b/drone-server/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.1"
 
 services:
   server:
@@ -12,6 +12,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./build:/build
+      - ./data:/data
     ports:
-      - "8080:8080"
+      - "80:80"
+      - "443:443"
 
