--- a/drone-runner/secrets.env.sample
+++ b/drone-runner/secrets.env.sample
@@ -2,3 +2,7 @@ DRONE_RPC_SECRET=
 DRONE_RPC_PROTO=
 DRONE_RPC_HOST=
 
+DRONE_RUNNER_NAME=${HOSTNAME}
+DRONE_RUNNER_CAPACITY=2
+# DRONE_RPC_DEBUG=true
+
