Mount /root/.cache for reusing acme keys

--- a/drone-server/docker-compose.yml
+++ b/drone-server/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./build:/build
-      - ./data:/data
+      - ./cache:/root/.cache/
     ports:
       - "80:80"
       - "443:443"
